--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "immer": "^10.0.2",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "redux": "^4.2.1"
   }
 }
