--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
 dist-ssr
 *.local
 
@@ -22,3 +21,8 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# lock files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
