--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "webpack-dev-server": "3.10.3"
   },
   "dependencies": {
+    "@redux-devtools/extension": "^3.3.0",
     "immer": "^10.0.3",
     "lodash": "^4.17.21",
     "redux": "^4.2.1"
