--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@redux-devtools/extension": "^3.3.0",
+    "@reduxjs/toolkit": "^2.0.1",
     "immer": "^10.0.3",
     "lodash": "^4.17.21",
     "redux": "^4.2.1"
