--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+dist
 dist-ssr
 *.local
 
@@ -21,8 +22,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-
-# lock files
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
