--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "redux-starter",
-  "version": "1.0.0",
-  "description": "Redux Starter Project",
-  "main": "index.js",
+  "name": "redux",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.js"
-  },
-  "keywords": [],
-  "author": "Mosh Hamedani",
-  "license": "ISC",
-  "devDependencies": {
-    "webpack": "4.41.6",
-    "webpack-cli": "3.3.11",
-    "webpack-dev-server": "3.10.3"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@redux-devtools/extension": "^3.3.0",
-    "@reduxjs/toolkit": "^2.0.1",
-    "immer": "^10.0.3",
-    "lodash": "^4.17.21",
-    "redux": "^4.2.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8"
   }
 }
